refactor: return type in StatClient changed from ResponseEntity<Object> to ResponseEntity<List<ViewStatsDto>> & code cleanup