@@ -1,35 +1,32 @@
 package ru.practicum.statServer.client;
 
 import com.fasterxml.jackson.databind.ObjectMapper;
-import com.fasterxml.jackson.databind.SerializationFeature;
-import com.fasterxml.jackson.datatype.jsr310.JSR310Module;
 import lombok.SneakyThrows;
-import org.junit.jupiter.api.*;
+import org.aspectj.lang.annotation.After;
+import org.junit.jupiter.api.AfterEach;
+import org.junit.jupiter.api.BeforeEach;
+import org.junit.jupiter.api.Test;
 import org.mockserver.integration.ClientAndServer;
 import org.mockserver.model.MediaType;
 import org.springframework.beans.factory.annotation.Autowired;
-import org.springframework.boot.SpringApplication;
-import org.springframework.boot.test.autoconfigure.web.servlet.WebMvcTest;
+import org.springframework.beans.factory.annotation.Value;
 import org.springframework.boot.test.context.SpringBootTest;
-import org.springframework.context.ConfigurableApplicationContext;
 import org.springframework.http.ResponseEntity;
 import ru.practicum.statClient.StatClient;
 import ru.practicum.statClient.WebClientConfig;
 import ru.practicum.statDto.dto.EndpointHitDto;
 import ru.practicum.statDto.dto.ViewStatsDto;
-import ru.practicum.statServer.StatServerApp;
 
 import java.time.LocalDateTime;
-import java.util.Arrays;
 import java.util.List;
 
-import static org.junit.jupiter.api.Assertions.*;
+import static org.assertj.core.api.Assertions.assertThat;
+import static org.junit.jupiter.api.Assertions.assertDoesNotThrow;
+import static org.junit.jupiter.api.Assertions.assertTrue;
+import static org.mockserver.integration.ClientAndServer.startClientAndServer;
 import static org.mockserver.model.HttpRequest.request;
 import static org.mockserver.model.HttpResponse.response;
-import static org.mockserver.integration.ClientAndServer.startClientAndServer;
-import static org.assertj.core.api.Assertions.assertThat;
 import static ru.practicum.statDto.util.Constants.FORMATTER;
-
 
 @SpringBootTest(classes = {StatClient.class, WebClientConfig.class})
 class StatClientTest {
@@ -38,16 +35,13 @@ class StatClientTest {
     private StatClient statClient;
 
     private ClientAndServer mockServer;
-
     private final ObjectMapper objectMapper = new ObjectMapper().findAndRegisterModules();
-
     private final EndpointHitDto endpointHitDto = EndpointHitDto.builder()
             .uri("/uri")
             .app("app")
             .ip("1.1.1.1")
             .timestamp(LocalDateTime.now())
             .build();
-
     private final ViewStatsDto viewStatsDto = ViewStatsDto.builder()
             .uri("/uri")
             .app("app")
@@ -56,7 +50,12 @@ class StatClientTest {
 
     @BeforeEach
     void beforeEach() {
-        mockServer = startClientAndServer(9090);
+        mockServer = startClientAndServer(7070);
+    }
+
+    @AfterEach
+    void afterEach() {
+        mockServer.stop();
     }
 
     @Test
@@ -75,7 +74,7 @@ class StatClientTest {
                 );
 
         assertDoesNotThrow(() ->
-            statClient.addHit(endpointHitDto)
+                statClient.addHit(endpointHitDto)
         );
     }
 
@@ -102,13 +101,13 @@ class StatClientTest {
                                 .withStatusCode(200)
                 );
 
-        ResponseEntity<Object> response = statClient.getStats(start, end, List.of("/uri"), false);
-        List<ViewStatsDto> stats = Arrays.asList(objectMapper.readValue(
-                objectMapper.writeValueAsString(response.getBody()), ViewStatsDto[].class));
-
+        ResponseEntity<List<ViewStatsDto>> response = statClient.getStats(start, end, List.of("/uri"), false);
+        List<ViewStatsDto> stats = response.getBody();
 
         assertTrue(response.getStatusCode().is2xxSuccessful());
-        assertThat(stats).hasSize(1);
+        assertThat(stats).hasSize(1)
+                .extracting(ViewStatsDto::getApp)
+                .containsExactly("app");
     }
 
 }
